<resources>

    <string name="app_name">HairtologyUser</string>

    <string name="str_about_us">About us</string>
    <string name="str_add_note">Add note</string>
    <string name="str_address">Address</string>
    <string name="str_am">AM</string>
    <string name="str_available_slots">Available Slots</string>
    <string name="str_back_to_login">Back to login</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_cancel_reservation">Cancel Reservation</string>
    <string name="str_confirm_password">Confirm password</string>
    <string name="str_contact_number">Contact number</string>
    <string name="str_current_password">Current Password</string>
    <string name="str_date">Date</string>
    <string name="str_day">Day</string>
    <string name="str_description">Description</string>
    <string name="str_email">Email</string>
    <string name="str_error">Error</string>
    <string name="str_feedback">Feedback</string>
    <string name="str_first_name">First name</string>
    <string name="str_getting_your_reservations">Getting your reservations</string>
    <string name="str_hairtology">Hairtology</string>
    <string name="str_hello">Hello</string>
    <string name="str_hours">Hours</string>
    <string name="str_invalid_username">Not a valid username</string>
    <string name="str_invalid_password">Password must be >5 characters</string>
    <string name="str_last_name">Last name</string>
    <string name="str_lets_get_started">Let\'s get started!</string>
    <string name="str_leave_a_review_for_the_shop">Leave a review for the shop</string>
    <string name="str_loading_all_shops">Loading all shops</string>
    <string name="str_login">Login</string>
    <string name="str_login_failed">"Login failed"</string>
    <string name="str_logout">Logout</string>
    <string name="str_map">Map</string>
    <string name="str_month">Month</string>
    <string name="str_name">Name</string>
    <string name="str_new_password">New Password</string>
    <string name="str_notes">Notes</string>
    <string name="str_owner_cancelled_the_reservation">Owner cancelled this reservation</string>
    <string name="str_password">Password</string>
    <string name="str_password_did_not_match">Password did not match</string>
    <string name="str_please_enter_first_name">Please enter your first name</string>
    <string name="str_please_enter_last_name">Please enter your last name</string>
    <string name="str_please_enter_email">Please enter your email</string>
    <string name="str_please_enter_password">Please enter your password</string>
    <string name="str_please_confirm_password">Please confirm your password</string>
    <string name="str_please_leave_a_review">Please leave a review for this shop to improved their services.</string>
    <string name="str_please_select_your_country">Please select your country</string>
    <string name="str_pm">PM</string>
    <string name="str_profile">Profile</string>
    <string name="str_rating">Rating</string>
    <string name="str_rate_shop">Rate Shop</string>
    <string name="str_reviews">Reviews</string>
    <string name="str_read_review">Read Review</string>
    <string name="str_register">Register</string>
    <string name="str_reservation">Reservation</string>
    <string name="str_reservations">Reservations</string>
    <string name="str_reservation_info">Reservation Info</string>
    <string name="str_reserve">Reserve</string>
    <string name="str_reserve_now">Reserve Now</string>
    <string name="str_save">Save</string>
    <string name="str_schedules">Schedules</string>
    <string name="str_search_shop">Search shop</string>
    <string name="str_select_country">Select Country</string>
    <string name="str_select_date">Select date</string>
    <string name="str_selected_date">Selected date</string>
    <string name="str_select_time">Select time</string>
    <string name="str_selected_time">Selected time</string>
    <string name="str_settings">Settings</string>
    <string name="str_services">Services</string>
    <string name="str_service_detail">Service detail</string>
    <string name="str_service_name">Service name</string>
    <string name="str_shop">Shop</string>
    <string name="str_shops">Shops</string>
    <string name="str_shop_name">Shop name</string>
    <string name="str_slots">Slots</string>
    <string name="str_submit">Submit</string>
    <string name="str_successfully_reserved">Successfully Reserved</string>
    <string name="str_time">Time</string>
    <string name="str_type_your_message">Type your message</string>
    <string name="str_update_password">Update Password</string>
    <string name="str_update_profile">Update Profile</string>
    <string name="str_view_shop">View Shop</string>
    <string name="str_welcome">"Welcome!"</string>
    <string name="str_welcome_to_hairtology">Welcome to Hairtology!</string>
    <string name="str_write_your_review">Write your review...</string>
    <string name="str_you_cancelled_the_reservation">You cancelled this reservation</string>
    <string name="str_you_dont_have_reservation_yet">You don\'t have reservation yet</string>
    <string name="str_your_go_to_app">Your go-to app for all things hair.</string>
    <string name="str_your_account_is_disabled">Your account is temporarily disabled</string>

    <!-- LIST -->
    <string name="str_time_6_7">6AM - 7AM</string>
    <string name="str_time_7_8">7AM - 8AM</string>
    <string name="str_time_8_9">8AM - 9AM</string>
    <string name="str_time_9_10">9AM - 10AM</string>
    <string name="str_time_10_11">10AM - 11AM</string>
    <string name="str_time_11_12">11AM - 12PM</string>
    <string name="str_time_12_1">12PM - 1PM</string>
    <string name="str_time_1_2">1PM - 2PM</string>
    <string name="str_time_2_3">2PM - 3PM</string>
    <string name="str_time_3_4">3PM - 4PM</string>
    <string name="str_time_4_5">4PM - 5PM</string>
    <string name="str_time_5_6">5PM - 6PM</string>

    <string name="str_mon">Mon</string>
    <string name="str_tue">Tue</string>
    <string name="str_wed">Wed</string>
    <string name="str_thu">Thu</string>
    <string name="str_fri">Fri</string>

    <!-- PLACE HOLDER -->
    <string name="str_place_holder_date">January 2023</string>
    <string name="str_place_holder_date2">Month day year</string>
    <string name="str_place_holder_day_num">1</string>
    <string name="str_place_holder_price">0.00</string>
    <string name="str_place_holder_time">0:00 AM</string>

    <!-- STRING SYMBOLS -->
    <string name="str_symbol_peso">₱</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>