<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/reservationInfoLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/str_reservation_info"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reservationInfoCancelledTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/str_you_cancelled_the_reservation"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone"
            android:background="@drawable/box_error"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/reservationInfoNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/str_service_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/box_secondary2"
            tools:ignore="NestedWeights" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/priceTextView"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="@string/str_place_holder_price"
                android:textSize="15sp"
                android:textStyle="bold"
                android:background="@drawable/box_secondary2"/>

            <TextView
                android:id="@+id/dayTextView"
                android:layout_width="75dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="@string/str_place_holder_day_num"
                android:textSize="40sp"
                android:textStyle="bold"
                android:background="@drawable/box_secondary2"/>



            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/timeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/str_time"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/monthTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/str_month" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/detailLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/box_secondary2">

            <TextView
                android:id="@+id/detailTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/str_service_detail"
                android:textSize="15sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/reservationInfoShopButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:text="@string/str_view_shop"
                android:textColor="@color/secondary"
                android:textSize="10sp"
                android:background="@drawable/button_secondary"
                tools:ignore="SmallSp" />

            <Button
                android:id="@+id/reservationInfoCancelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="20dp"
                android:layout_marginStart="5dp"
                android:text="@string/str_cancel_reservation"
                android:textColor="@color/secondary"
                android:textSize="10sp"
                android:background="@drawable/button_secondary"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/onUserReservationInfoFragment"
            android:name="com.project.hairtologyuser.views.fragments.userchat.UserChatFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            tools:layout="@layout/fragment_user_chat" />

    </LinearLayout>

</LinearLayout>