<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.project.myapplication.views.fragments.login.LoginViewModel" />

        <variable
            name="fragment"
            type="com.project.myapplication.views.fragments.login.LoginFragment" />
    </data>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/fragment_horizontal_margin"
        android:paddingTop="@dimen/fragment_vertical_margin"
        android:paddingRight="@dimen/fragment_horizontal_margin"
        android:paddingBottom="@dimen/fragment_vertical_margin"
        android:orientation="vertical"
        tools:context=".views.fragments.login.LoginFragment">

        <EditText
            style="@style/AppTheme.FormField.Outlined"
            android:id="@+id/emailEditText"
            android:layout_marginStart="24dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/str_email"
            android:inputType="textEmailAddress" />

        <EditText
            style="@style/AppTheme.FormField.Outlined"
            android:id="@+id/passwordEditText"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/str_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword" />

        <Button
            style="@style/AppTheme.Button"
            android:id="@+id/loginButton"
            android:layout_gravity="center"
            android:layout_marginStart="48dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="16dp"
            android:enabled="true"
            android:text="@string/str_login" />

        <Button
            style="@style/AppTheme.Button"
            android:id="@+id/registerButton"
            android:layout_gravity="center"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="64dp"
            android:enabled="true"
            android:text="@string/str_register" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone" />

    </LinearLayout>

</layout>