<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="3dp">

    <LinearLayout
        android:id="@+id/shopItemLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/shopItemViewPager"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="10dp"
            android:overScrollMode="never"
            android:clipToPadding="false"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/shopItemFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_favorite_primary_24" />

            <TextView
                android:id="@+id/shopItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/str_shop_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/primary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_location_on_24" />

            <TextView
                android:id="@+id/shopItemAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/str_address"
                android:textColor="@color/primary"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/ic_hour_24" />

            <TextView
                android:id="@+id/shopItemHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="@string/str_hours"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/primary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:text="@string/str_symbol_peso" />

            <TextView
                android:id="@+id/shopItemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/primary"
                android:text="@string/str_place_holder_price" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>